--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-GEMINI_API_KEY='AIzaSyDfG8YqZSUPZFZPMyvUVTFZwjDBefwd9Lk'    
+GEMINI_API_KEY='AIzaSyD1TKRqS4WzEyrR11tl_0oDhLSBnf9OhBM' 
+TELEGRAM_BOT_TOKEN="6921931315:AAGK5XB5wBaVAjoah2_B9z4FGqna4eL8gPs"
+TELEGRAM_CHAT_ID="6966892960" # ID chat atau channel tujuan notifikasi
+
